Source/WebCore/platform/graphics/ImageObserver.h
@@ -50,6 +50,7 @@ public:
     virtual bool canDestroyDecodedData(const Image&) = 0;
     virtual void imageFrameAvailable(const Image&, ImageAnimatingState, const IntRect* changeRect = nullptr, DecodingStatus = DecodingStatus::Invalid) = 0;
     virtual void changedInRect(const Image&, const IntRect* changeRect = nullptr) = 0;
+    virtual void scheduleTimedRenderingUpdate(const Image&) = 0;
 };
 
 }
