Source/WebCore/svg/graphics/SVGImageClients.h
@@ -62,7 +62,14 @@ private:
 
         imageObserver->imageFrameAvailable(*m_image, m_image->isAnimating() ? ImageAnimatingState::Yes : ImageAnimatingState::No, &r);
     }
-    
+
+    bool scheduleTimedRenderingUpdate() final
+    {
+        if (m_image && m_image->imageObserver())
+            m_image->imageObserver()->scheduleTimedRenderingUpdate(*m_image);
+        return true;
+    }
+
     SVGImage* m_image;
 };
 
